--- a/GraphicEngine/GraphicEngine.vcxproj
+++ b/GraphicEngine/GraphicEngine.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DepthOfField.cpp" />
     <ClCompile Include="GeometricObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Plane.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DepthOfField.h" />
     <ClInclude Include="GeometricObject.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Poly.h" />
