--- a/GraphicEngine/GraphicEngine.vcxproj.filters
+++ b/GraphicEngine/GraphicEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Poly.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DepthOfField.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Poly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DepthOfField.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
