--- a/GraphicEngine/GraphicEngine.vcxproj.filters
+++ b/GraphicEngine/GraphicEngine.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Compound.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Compound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
